outputs_20260401-083520-84c756d6/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c:16:
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\include/egtm_atom_3_phase_inverter_pwm.h:14:31: error: unknown type name 'float32'; did you mean '_Float32'?
   14 | void updateEgtmAtom3phInvDuty(float32 *requestDuty);
      |                               ^~~~~~~
      |                               _Float32
In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c:18:
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\include/IfxEgtm_Pwm.h:109:5: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
  109 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c: In function 'interruptEgtmAtom':
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c:47:42: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P33'?
   47 | #define LED                            (&MODULE_P03), 9u
      |                                          ^~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c:82:23: note: in expansion of macro 'LED'
   82 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c:47:42: note: each undeclared identifier is reported only once for each function it appears in
   47 | #define LED                            (&MODULE_P03), 9u
      |                                          ^~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c:82:23: note: in expansion of macro 'LED'
   82 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c:208:11: error: 'IfxEgtm_Pwm_Config' has no member named 'syncUpdateEnabled'
  208 |     config.syncUpdateEnabled  = TRUE;                                  /* Synchronous shadow updates at period end */
      |           ^
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c:209:11: error: 'IfxEgtm_Pwm_Config' has no member named 'syncStart'
  209 |     config.syncStart          = TRUE;                                  /* Start outputs after init */
      |           ^
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c:47:42: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P33'?
   47 | #define LED                            (&MODULE_P03), 9u
      |                                          ^~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\src\egtm_atom_3_phase_inverter_pwm.c:243:30: note: in expansion of macro 'LED'
  243 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |                              ^~~

In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:5:
C:\Users\extalth\AppData\Local\Temp\tdd_build_vq5jwose\include/IfxEgtm_Pwm.h:109:5: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
  109 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
